--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/i18n.min.js",
   "module": "src/index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack",
+    "generate": "node ./scripts/generate-named-exports",
+    "build": "npm run generate & NODE_ENV=production webpack",
     "release": "npm run build && standard-version"
   },
   "repository": {
@@ -28,11 +29,11 @@
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "husky": "^3.0.5",
+    "husky": "^3.0.9",
     "standard": "^14.3.1",
     "standard-version": "^7.0.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "husky": {
     "hooks": {
