--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   },
   "homepage": "https://github.com/ecomclub/i18n#readme",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "babel-loader": "^8.0.6",
     "husky": "^3.0.9",
     "standard": "^14.3.1",
     "standard-version": "^7.0.0",
