--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ecomclub/i18n.git"
+    "url": "git+https://github.com/ecomplus/i18n.git"
   },
   "keywords": [
     "ecommerce",
