--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "author": "E-Com Club <ti@e-com.club>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ecomclub/i18n/issues"
+    "url": "https://github.com/ecomplus/i18n/issues"
   },
-  "homepage": "https://github.com/ecomclub/i18n#readme",
+  "homepage": "https://github.com/ecomplus/i18n#readme",
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
