--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "generate": "node ./scripts/generate-named-exports",
     "build": "npm run generate && cross-env NODE_ENV=production webpack",
-    "release": "rm -rf ./dist; npm run build && standard-version"
+    "release": "rm -rf ./dist; npm run build && commit-and-tag-version"
   },
   "repository": {
     "type": "git",
